Changelogs :
- upstream to 4.14.200
- Android R (11.0) release